[metadata]
name = cmc-api-wrapper
version = 0.0.1
author = Victor Andres Aguirre Fernandez
author_email = victoraguirre.f@gmail.com
description = A wrapper for the Con Market Cap API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CubeVic/coinmarketcapAPI
project_urls =
    Bug Tracker = https://github.com/CubeVic/coinmarketcapAPI/issues
keywords=['python-client', 'CoinMarketCap','crypto']
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
